--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Exposição - Edição Harley Davidson</title>
-    <link rel="stylesheet" href="styles.css" />
-    <link rel="shortcut icon" href="img/motocicleta.png" type="image/x-icon" />
+  <title>Exposição - Edição Harley Davidson</title>
+  <link rel="stylesheet" href="styles.css" />
+  <link rel="shortcut icon" href="img/motocicleta.png" type="image/x-icon" />
 </head>
 
 <body>
@@ -49,7 +49,7 @@
     </div>
   </header>
 
-  <section id="key-benefit">
+  <section id="key-benefits">
     <h2>Explore a linha de motocicletas</h2>
     <div class="benefits">
       <div class="benefit">
@@ -87,16 +87,6 @@
     <div class="detail">
       <div class="detail-description">
         <h3>Mais do que construir máquinas. Liberdade para a alma.</h3>
-      </div>
-      <div class="detail-description">
-        <h3>Modelos 2025</h3>
-        <ul>
-          <li>Grand americano Touring</li>
-          <li>Cruiser</li>
-          <li>Adventure touring</li>
-          <li>Sport</li>
-          <li>E muito mais...</li>
-        </ul>
       </div>
       <div class="detail-description">
         <h3>Modelos 2025</h3>
